--- a/custom_components/esp32_view_creator/manifest.json
+++ b/custom_components/esp32_view_creator/manifest.json
@@ -5,5 +5,7 @@
     "documentation": "https://github.com/yourusername/esp32_view_creator",
     "requirements": ["aiohttp"],
     "dependencies": [],
-    "codeowners": ["@skalinkas"]
+    "codeowners": ["@yourusername"],
+    "iot_class": "local_polling",
+    "config_flow": true
 }
